2013-03-06  Ramon Casero  <rcasero@gmail.com>

	* matlab/ThirdPartyToolbox/dijkstra.cpp: (0.2.0)
	* Add matlab/test/test_dijkstra.m:

	- Now the user can provide a list of targets. Once the algorithm
	has found the shortest distances to all targets, it stops. This is
	useful for large sparse matrices, where we are interested e.g. in
	the path between two nodes.

2013-03-03  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/scimat_dmatrix_thickslice.m: (v0.1.2)

	- Fix bug. Method failed when the slice had fewer voxels than the
	number K of nearest neighbours we wanted.

	* matlab/PointsToolbox/surface_interpolation.m: (v0.5.2)

	- Add PARAM.init so that we can choose the type of initialisation
	for spherical MDS. Before, we only had the project on sphere along
	radii option. Now, we can choose random initialisation, that
	overcomes local minimum problems.

2013-03-01  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/scimat_closed_surf_to_bw.m: (v0.1.0)

	- SCIMAT_CLOSED_SURF_TO_BW Segment the inside of the triangulation
	of a closed surface.

2013-02-28  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/delaunay_sphere.m: (0.1.0)

	- DELAUNAY_SPHERE Triangulation of a sphere or a surface
	topologically equivalent to a sphere so that it can be used as a
	mesh.

	* Add matlab/PointsToolbox/thickslice_collate_sax_la.m: (0.1.0)

	- THICKSLICE_COLLATE_SAX_LA Build a distance/adjacency matrix
	collating points from a Long Axis plane to a set of Short Axis
	planes.

	* matlab/PointsToolbox/surface_interpolation.m: (v0.5.1)

	- Accept a tension interpolation parameter for spherical
	splines. Tension works as a regulariser, smoothing the spline.

2013-02-27  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/PointsToolbox/scimat_simlandmarks_thickslice.m: (0.1.0)

	- SCIMAT_SIMLANDMARKS_THICKSLICE Simulate a human placing
	landmarks on the boundary of a "thick slice" segmentation.
