@@ -2,6 +2,7 @@
 
 	* matlab/ThirdPartyToolbox/dijkstra.cpp: (0.2.0)
 	* Add matlab/test/test_dijkstra.m:
+	* matlab/ThirdPartyToolbox/dijkstra.m: (0.2.0)
 
 	- Now the user can provide a list of targets. Once the algorithm
 	has found the shortest distances to all targets, it stops. This is
